# solidity-vuln-demos

./: README.md  claude.py  gpt.py  pyproject.toml  workflow.py
claude-example/: 1.1.1-Unsafe-Credit-Transfer-attack.sol  1.1.1-Unsafe-Credit-Transfer-fixed.sol  1.1.1-Unsafe-Credit-Transfer-vulnerability.sol  1.1.2-Unsafe-System-State-Changes-attack.sol  1.1.2-Unsafe-System-State-Changes-fixed.sol  1.1.2-Unsafe-System-State-Changes-vulnerability.sol  2.1.2-Improper-Exception-Handling-in-a-Loop-attack.sol  2.1.2-Improper-Exception-Handling-in-a-Loop-fixed.sol  2.1.2-Improper-Exception-Handling-in-a-Loop-vulnerability.sol  3.1-Improper-Gas-Requirements-Checking-attack.sol  3.1-Improper-Gas-Requirements-Checking-fixed.sol  3.1-Improper-Gas-Requirements-Checking-vulnerability.sol  4.2-Unprotected-Transfer-Value-attack.sol  4.2-Unprotected-Transfer-Value-fixed.sol  4.2-Unprotected-Transfer-Value-vulnerability.sol  5.2-Improper-Declaration-or-Initialization-attack.sol  5.2-Improper-Declaration-or-Initialization-fixed.sol  5.2-Improper-Declaration-or-Initialization-vulnerability.sol  6.1.1-Incorrect-Use-of-Event-Blockchain-variables-for-Time-attack.sol  6.1.1-Incorrect-Use-of-Event-Blockchain-variables-for-Time-fixed.sol  6.1.1-Incorrect-Use-of-Event-Blockchain-variables-for-Time-vulnerability.sol  6.1.4-Transfer-Pre-Condition-Dependent-on-Transaction-Order-attack.sol  6.1.4-Transfer-Pre-Condition-Dependent-on-Transaction-Order-fixed.sol  6.1.4-Transfer-Pre-Condition-Dependent-on-Transaction-Order-vulnerability.sol  7.1.1-Integer-Underflow-attack.sol  (+5 more)
(+46 files in other folders)
