[project]
name = "solidity-vuln-demos"
version = "0.1.0"
description = ""
authors = [
    {name = "Tonyrj3268",email = "chiacheng.lin0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.65.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "anthropic (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
