[project]
name = "solidity-vuln-demos"
version = "0.1.0"
description = ""
authors = [
    {name = "TonyLin",email = "chiacheng.lin0@gmail.com"}
]
readme = "README.md"
python = ">=3.13,<4"
requires-python = ">=3.13,<4"
dependencies = [
    "openai (>=1.66.5,<2.0.0)",
    "anthropic (>=0.49.0,<0.50.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "py-solc-x (>=2.0.3,<3.0.0); python_version < '4'",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
